Fix spacing on phones

--- a/css/main.scss
+++ b/css/main.scss
@@ -2,6 +2,8 @@
 # Main Styles
 ---
 
+@import "mixins";
+
 $blue: #2950C3;
 
 @mixin noselect {
@@ -50,6 +52,10 @@ a:visited { color: $blue; }
     margin-bottom: 1.7em;
     margin-top: 2.3em;
     text-align: center;
+    @include phone {
+      margin-top: 1.5em;
+      margin-bottom: 1em;
+    }
     span {
       font-weight: 700;
     }
@@ -65,8 +71,7 @@ a:visited { color: $blue; }
     text-align: center;
     margin-bottom: 1.7em;
     margin-top: 1.7em;
-    a.logo {
-      display: block;
+    div.logo {
       margin-bottom: 0.2em;
       img {
         width: 25px;
